rns-lang/src/lexer/snapshots/integers-boundaries.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
2147483647 -2147483648
----- TOKENS -----
KIND                  | SPAN    | LSP       | TEXT
----                  | ----    | ---       | ----
Integer(2147483647)   | 0..10   | 0:0..10   | 2147483647
Integer(-2147483648)  | 11..22  | 0:11..22  | -2147483648
Newline               | 22..23  | 0:22..23  | \n
Eof                   | 23..23  | 1:0..0    |
