rns-lang/src/lexer/snapshots/integers-followed_by_paren.snap
---
source: jasm/src/lexer/tests.rs
expression: formatted
---
----- SOURCE -----
5)
----- TOKENS -----
KIND        | SPAN  | TEXT
----        | ----  | ----
Integer(5)  | 0..1  | 5
CloseParen  | 1..2  | )
Newline     | 2..3  | \n
Eof         | 3..3  |
