rns-lang/src/lexer/snapshots/integers-leading_zeros.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
007 0000
----- TOKENS -----
KIND        | SPAN  | LSP     | TEXT
----        | ----  | ---     | ----
Integer(7)  | 0..3  | 0:0..3  | 007
Integer(0)  | 4..8  | 0:4..8  | 0000
Newline     | 8..9  | 0:8..9  | \n
Eof         | 9..9  | 1:0..0  |
