rns-lang/src/lexer/snapshots/integers-with_directive.snap
---
source: rns/src/lexer/tests.rs
expression: formatted
---
----- SOURCE -----
.code 5
----- TOKENS -----
KIND        | SPAN  | TEXT
----        | ----  | ----
DotCode     | 0..5  | .code
Integer(5)  | 6..7  | 5
Newline     | 7..8  | \n
Eof         | 8..8  |
