rns-lang/src/lexer/snapshots/integers-zero.snap
---
source: rns/src/lexer/tests.rs
expression: formatted
---
----- SOURCE -----
0
----- TOKENS -----
KIND        | SPAN  | TEXT
----        | ----  | ----
Integer(0)  | 0..1  | 0
Newline     | 1..2  | \n
Eof         | 2..2  |
